--- a/paginas/about.html
+++ b/paginas/about.html
@@ -7,15 +7,40 @@
     <link rel="stylesheet" href="../style/styles.css">
 </head>
 <body>
+    <br>
     <header>
         <img src="../img/logo-itr.jpeg" alt="Esta es una imagen de el logo del ITR ">
         <nav class="navar">
             <ul>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="../paginas/contact.html">Contacto</a></li>
-                <li><a href="../paginas/about.html">About</a></li>
+                <li><a href="../paginas/about.html">Acerca de</a></li>
             </ul>
         </nav>
     </header>
+    <br>
+    <main class="sobre">
+        <h2>Sobre nosotros :</h2>
+        <p>En la Academia de Música DO-RE-MI, creemos en el poder transformador de la música. Nuestra misión es brindar educación musical de calidad a personas de todas las edades y niveles, desde principiantes hasta aquellos que buscan perfeccionar su talento.</p>
+        <p>Contamos con un equipo de instructores experimentados y apasionados por la enseñanza, quienes te guiarán en tu viaje musical con clases personalizadas y adaptadas a tus necesidades.</p>
+        <h3>Ofrecemos una variedad de cursos, incluyendo:</h3>
+        <ul>
+            <li>🎹 Piano para principiantes</li>
+            <li>🎸 Guitarra acústica y eléctrica</li>
+            <li>🎤 Canto y técnica vocal</li>
+            <li>🎻 Violín clásico</li>
+
+            <p>Nuestro objetivo es ayudarte a desarrollar tu talento y disfrutar del aprendizaje musical en un ambiente inspirador y motivador. ¡Déjanos ser parte de tu camino en la música! 🎶
+
+            </p>
+        </ul>
+    </main>
+    <footer>
+        <p> © 2024 Academia musical de DO-RE-MI. Todos los derechos reservados.
+        </p>
+        <p>
+            Siguenos en nuestras redes sociales para estar al dia con eventos y ofertas especiales.
+        </p>
+    </footer>
 </body>
 </html>
