--- a/paginas/contact.html
+++ b/paginas/contact.html
@@ -7,15 +7,41 @@
     <link rel="stylesheet" href="../style/styles.css">
 </head>
 <body>
+    <br>
     <header>
         <img src="../img/logo-itr.jpeg" alt="Esta es una imagen de el logo del ITR ">
         <nav class="navar">
             <ul>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="../paginas/contact.html">Contacto</a></li>
-                <li><a href="../paginas/about.html">About</a></li>
+                <li><a href="../paginas/about.html">Acerca de</a></li>
             </ul>
         </nav>
     </header>
+    <br>
+    
+    <main class="courses">
+       <p> En acedemia de musica  DO-RE-MI creamos el poder transformar la musica.</p>
+    <p> Puedes encotrarnos ubicados Alameda Juan Panlo II.colonia el Reanacimiento.Local#2.San Salvador. </p>
+    <img src="../img/mapa.png" alt="mapa" class="image">
+    </main>
+    <br>
+    <br>
+    <div class="contac">
+    <h2>Medios de contacto :</h2>
+    <ul>
+        <li>Telefono: <i>+503 7382 681</i></li>
+        <li>Correo electronico: <i></i>20250764@ricaldone.edu.sv</li>
+    </ul>
+    </div>
+
+    <footer>
+        <p> © 2024 Academia musical de DO-RE-MI. Todos los derechos reservados.
+        </p>
+        <p>
+            Siguenos en nuestras redes sociales para estar al dia con eventos y ofertas especiales.
+        </p>
+    </footer>
+
 </body>
 </html>
